Terraform/Proyecto-Ingress-Deployer/manifests/gnp-soyclientemorales-qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-morales
  namespace: apps
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "apps-ip-proyecto"
spec:
  ingressClassName: gce 
  rules:
  - http:
      paths:
      - path: /apps-ingress/morales-crmpersonas
        pathType: Prefix 
        backend:
          service:
            name: morales-crmpersonas
            port:
              number: 8080
      - path: /apps-ingress/msv-herramientas
        pathType: Prefix 
        backend:
          service:
            name: morales-herramientas
            port:
              number: 8080
      - path: /apps-ingress/msv-descargadocumentos
        pathType: Prefix 
        backend:
          service:
            name: msv-descargadocumentos
            port:
              number: 8080
